# grenobleskistations

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Procfile  README.md  db_test.sqlite3  docker-compose.letsencrypt.yml  docker-compose.yml  load_ski_stations.py  procfile  requirements.txt
.github/secrets/: github-actions.secrets.example
.github/workflows/: ci.yml  deploy.yml  deploy_mobile.yml
api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0003_skistation_altitude.py  0004_skistation_distancefromgrenoble.py  0005_alter_skistation_altitude_and_more.py  0006_skimateriallisting_message.py  0007_rename_content_message_body_and_more.py  0008_userprofile.py  0009_alter_userprofile_user.py  0010_instructor_and_lending_updates.py  0010_listing_marketplace_upgrade.py  0011_busline_route_points_and_coords.py  0012_snowconditionupdate.py  0013_pisteconditionreport.py  0014_instructorprofile_profile_photo.py  0015_instructorreview.py  0016_servicestore_address_website_url.py  0017_crowdstatusupdate_and_unique_piste_report.py  0018_alter_busline_frequency.py  0019_expand_seed_related_varchar_fields.py  0020_servicestore_phone_servicestore_source_note.py  0021_userprofile_force_password_reset.py  0022_merge_0010_listing_and_0021.py  0023_marketplacesavedfilter.py  0024_social_partners_and_marketplace_ratings.py  0025_partner_reports_and_verified_deals.py  0026_alter_instructorreview_unique_together_and_more.py  0028_skistory.py  (+3 more)
deploy/: ROLL_OUT_PROD.md  entrypoint.sh  install.sh  rollout_beeware_api_prod.sh  set-github-secrets.sh  traefik-dynamic-grenobleski.yml
grenobleski_android_native/: README.md  gradle.properties  settings.gradle.kts
grenobleski_beeware/: README.md  pyproject.toml
grenobleski_beeware/src/grenobleski_mobile/: __main__.py  api_client.py  app.py  i18n.py  theme.py
skistation_project/: adapters.py  apps.py  backends.py  context_processors.py  forms.py  load_ski_stations.py  manage.py  middleware.py  pipeline.py  requirements.txt  settings.py  signals.py  urls.py  views.py  wsgi.py
static/css/: marketplace.css  (+1 more)
templates/: ajouter_materiel.html  base.html  bus.html  details.html  edit_instructor_service.html  edit_listing.html  index.html  instructor_register.html  instructor_services.html  instructors.html  listing_detail.html  privacy.html  profile.html  register.html  search.html  service_detail.html  services.html  ski_material_listings.html  ski_partner_publish.html  ski_partners.html  ski_stories.html  terms.html
(+57 files in other folders)
