[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grenobleski-mobile"
version = "0.1.0"
description = "BeeWare mobile/desktop app for GrenobleSki API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "toga>=0.4.8",
    "httpx>=0.27.0",
]

[tool.briefcase]
project_name = "GrenobleSki Mobile"
bundle = "fr.grenobleski"
version = "0.1.0"
url = "https://grenobleski.fr"
license.file = "../LICENSE"
author = "GrenobleSki"
author_email = "contact@grenobleski.fr"

[tool.briefcase.app.grenobleski_mobile]
formal_name = "GrenobleSki Mobile"
description = "Modern BeeWare app for stations, transport, services and marketplace"
long_description = "BeeWare client for GrenobleSki with multilingual UI and API login (email and Google token)."
sources = [
    "src/grenobleski_mobile",
]
requires = [
    "httpx>=0.27.0",
]

test_sources = [
    "tests",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
